# ComfyUI_TRELLIS2_SM

./: README.md  TRELLIS2_node.py  __init__.py  pyproject.toml  requirements.txt  utils.py
TRELLIS_2/trellis2/modules/: image_feature_extractor.py
TRELLIS_2/trellis2/pipelines/: trellis2_image_to_3d.py  trellis2_texturing.py
TRELLIS_2/trellis2/pipelines/rembg/: BiRefNet.py
example_workflows/: trellis2.json
